# enterprise-ai-assistant

./: .env.example  .gitignore  CHECKLIST.md  LICENSE  PLAN.md  README.md  TESTING_PLAYBOOK.md  main.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
config/: defaults.toml
research/: README.md  reproducibility.md
research/adversarial_evaluation/: adversarial_results_table.md  attack_corpus.py  evaluation_results.json  evaluation_summary.md  run_evaluation.py
research/baseline_comparison/: baseline_comparison_table.md  baseline_results.json  naive_baseline.py  run_comparison.py
research/evidence_package/: evidence_package.md  key_numbers.md  summary_tables.md
research/threat_model/: production_hardening_blueprints.md  related_work.md  threat_model.md
src/sentinel/: __init__.py  config.py  dependencies.py  logging_setup.py  main.py
src/sentinel/auth/: __init__.py  jwt_handler.py  middleware.py  password.py  routes.py
src/sentinel/knowledge/: ingestion.py  retrieval.py  store.py
src/sentinel/layers/: __init__.py  agent_identity.py  audit_logger.py  content_moderator.py  context_isolator.py  human_gate.py  system_prompt.py  (+6 more)
tests/: conftest.py  test_agent_identity.py  test_api.py  test_audit_logger.py  test_auth.py  test_content_moderator.py  test_context_isolator.py  test_human_gate.py  test_input_restructurer.py  test_input_validator.py  test_output_validator.py  test_pipeline_integration.py  test_rag.py  test_rate_limiter.py  test_semantic_guard.py  test_system_prompt.py  test_threat_monitor.py  test_token_budget.py
workflow/: workflow.md
(+13 files in other folders)
