[project]
name = "sentinel-ai"
version = "0.1.0"
description = "Sentinel AI — A 12-layer secure enterprise AI assistant. Companion code for 'Building Safe Agentic AI in Enterprise'."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Configuration
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    # Auth
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    # Redis (falls back to fakeredis when REDIS_URL is not set)
    "redis[hiredis]>=5.2",
    "fakeredis[lua]>=2.25",
    # OpenAI + token counting
    "openai>=1.57",
    "tiktoken>=0.8",
    # LLM security scanning
    "llm-guard>=0.3",
    # Vector database (embedded — no server required)
    "chromadb>=0.6",
    # File upload handling
    "python-multipart>=0.0.18",
    "python-magic>=0.4",
    # Structured logging
    "structlog>=24.4",
    # Async HTTP client
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py312"
